--- a/street_images/templates/street_images/home.html
+++ b/street_images/templates/street_images/home.html
@@ -94,7 +94,7 @@
                     <div class="intro-text">
                         <span class="name">BOGODATA</span>
                         <hr class="star-light">
-                        <span class="skills">Data Science & Machine Learning aplicadas en Bogotá</span>
+                        <span class="skills">Data Science and Machine Learning applied in Bogotá City</span>
                     </div>
                 </div>
             </div>
@@ -111,8 +111,9 @@
                 <div class="col-lg-12 text-center">
                     <h2>Percepción de Seguridad</h2>
 		    <p align="justify"><font color="black">
-			¿Existe una relación entre la apariencia visual de una calle y la percepción de seguridad de los ciudadanos al
-			 transitar por ella? La apriencia visual de una calle 
+			¿Existe una relación entre la apariencia visual de una calle y el comportamiendo de los ciudadanos.
+			 Específicamente, la apariencia visual de una calle determina qué tan cómodo y tranquilo te sientes
+			 transitando por esta? 
            	    </font></p>
                 </div>
             </div>
